# aspire-samples

./: .gitattributes  .gitignore  README.md  amplesaspire-with-javascript
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  for.dependabot.only.sln
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/policies/: auto-merge.yml  label-prs.yml
.github/workflows/: agentic.md  agentics-maintenance.yml  backlog-triage.lock.yml  backlog-triage.md  ci-doctor.lock.yml  ci-doctor.md  ci.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  doc-updater.lock.yml  doc-updater.md  issue-triage.lock.yml  issue-triage.md  labeler-cache-retention.yml  labeler-predict-issues.yml  labeler-predict-pulls.yml  malicious-code-scan.lock.yml  malicious-code-scan.md
samples/: Directory.Build.props
samples/AspireWithCosmosDb/: aspire.config.json
samples/AspireWithCosmosDbTypeScript/AspireWithCosmosDbTS/app/: main.py  pyproject.toml
samples/Keycloak/: aspire.config.json
samples/Metrics/: README.md
samples/aspire-shop/: README.md
samples/aspire-with-azure-functions/: Directory.Packages.props  README.md
samples/aspire-with-javascript/: Directory.Packages.props  README.md  aspire.config.json
samples/aspire-with-node/: README.md  apphost.mts  aspire.config.json  package-lock.json  package.json  tsconfig.apphost.json
samples/golang-api/: README.md  (+4 more)
samples/polyglot-task-queue/worker-python/: main.py  pyproject.toml
samples/rag-document-qa-svelte/api/: main.py  pyproject.toml
tests/: Directory.Build.props
(+620 files in other folders)
