[project]
name = "rag-api"
version = "0.1.0"
description = "RAG Document Q&A API with Qdrant and OpenAI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.57.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.18",
    "tiktoken>=0.8.0"
]
