[project]
name = "FastAPI-cosmos-todos"
version = "0.1.0"
description = "FastAPI TODO app with Azure Cosmos DB"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "azure-cosmos>=4.9.0",
    "pydantic>=2.0.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
]
